# AK_lab2

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ninja
src/: main.cpp
